--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,38 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Environments
-.env
-.env.*
-.env.swp
-.venv
-env/
+*.so
+.Python
 venv/
+env/
 ENV/
-env.bak/
-venv.bak/
+*.egg-info/
+dist/
+build/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Environment
+.env
+.venv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
 
 # instance data, databases
 instance/volumes/
