--- a/Prototype/.env.example
+++ b/Prototype/.env.example
@@ -3,3 +3,4 @@ FLASK_ENV=development
 SECRET_KEY=your_super_secret_key_change_in_production
 JWT_SECRET_KEY=your_jwt_secret_key_change_in_production
 DATABASE_PATH=database.db
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
