--- a/Prototype/requirements.txt
+++ b/Prototype/requirements.txt
@@ -4,3 +4,6 @@ flask-jwt-extended==4.7.1
 Flask-Limiter==3.5.0
 bcrypt==5.0.0
 python-dotenv==1.0.0
+
+# Gemini SDK for grading endpoint
+google-genai
