--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,14 +36,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      - name: Install Maturin
+        run: pip install maturin
       - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-          manylinux: auto
-        working-directory: rust/rustism
+        run: cd rust/rustism && maturin build --target ${{ matrix.platform.target }} --release --out dist --find-interpreter
+        env:
+          SCCACHE: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -68,14 +66,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      - name: Install Maturin
+        run: pip install maturin
       - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-          manylinux: musllinux_1_2
-        working-directory: rust/rustism
+        run: cd rust/rustism && maturin build --target ${{ matrix.platform.target }} --release --out dist --find-interpreter
+        env:
+          SCCACHE: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -97,13 +93,12 @@ jobs:
         with:
           python-version: 3.x
           architecture: ${{ matrix.platform.target }}
+      - name: Install Maturin
+        run: pip install maturin
       - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        working-directory: rust/rustism
+        run: cd rust/rustism && maturin build --target ${{ matrix.platform.target }} --release --out dist --find-interpreter
+        env:
+          SCCACHE: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -124,13 +119,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      - name: Install Maturin
+        run: pip install maturin
       - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        working-directory: rust/rustism
+        run: cd rust/rustism && maturin build --target ${{ matrix.platform.target }} --release --out dist --find-interpreter
+        env:
+          SCCACHE: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -141,12 +135,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install Maturin
+        run: pip install maturin
       - name: Build sdist
-        uses: PyO3/maturin-action@v1
-        with:
-          command: sdist
-          args: --out dist
-        working-directory: rust/rustism
+        run: cd rust/rustism && maturin sdist --out dist
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
@@ -161,13 +153,12 @@ jobs:
       contents: read
     steps:
       - uses: actions/download-artifact@v4
+      - name: Install Maturin
+        run: pip install maturin
       - name: Publish to GitHub Packages
-        uses: PyO3/maturin-action@v1
+        run: maturin upload --repository-url https://pypi.pkg.github.com/${{ github.repository_owner }} --non-interactive wheels-*/*
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          command: upload
-          args: --repository-url https://pypi.pkg.github.com/${{ github.repository_owner }} --non-interactive wheels-*/*
 
   release:
     name: Release
