--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,17 +20,17 @@ jobs:
       matrix:
         platform:
           - runner: ubuntu-22.04
-            target: x86_64
+            target: x86_64-unknown-linux-gnu
           - runner: ubuntu-22.04
-            target: x86
+            target: i686-unknown-linux-gnu
           - runner: ubuntu-22.04
-            target: aarch64
+            target: aarch64-unknown-linux-gnu
           - runner: ubuntu-22.04
-            target: armv7
+            target: armv7-unknown-linux-gnueabihf
           - runner: ubuntu-22.04
-            target: s390x
+            target: s390x-unknown-linux-gnu
           - runner: ubuntu-22.04
-            target: ppc64le
+            target: powerpc64le-unknown-linux-gnu
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -54,13 +54,13 @@ jobs:
       matrix:
         platform:
           - runner: ubuntu-22.04
-            target: x86_64
+            target: x86_64-unknown-linux-musl
           - runner: ubuntu-22.04
-            target: x86
+            target: i686-unknown-linux-musl
           - runner: ubuntu-22.04
-            target: aarch64
+            target: aarch64-unknown-linux-musl
           - runner: ubuntu-22.04
-            target: armv7
+            target: armv7-unknown-linux-musleabihf
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -84,9 +84,9 @@ jobs:
       matrix:
         platform:
           - runner: windows-latest
-            target: x64
+            target: x86_64-pc-windows-msvc
           - runner: windows-latest
-            target: x86
+            target: i686-pc-windows-msvc
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -111,9 +111,9 @@ jobs:
       matrix:
         platform:
           - runner: macos-13
-            target: x86_64
+            target: x86_64-apple-darwin
           - runner: macos-14
-            target: aarch64
+            target: aarch64-apple-darwin
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
