--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,46 +36,25 @@ jobs:
         run: pip install maturin
       - name: Add Rust target
         run: rustup target add ${{ matrix.platform.target }}
+      - name: Install cross-compiler
+        if: matrix.platform.target == 'armv7-unknown-linux-gnueabihf' || matrix.platform.target == 'aarch64-unknown-linux-gnu'
+        run: |
+          sudo apt-get update
+          if [ "${{ matrix.platform.target }}" = "armv7-unknown-linux-gnueabihf" ]; then
+            sudo apt-get install -y gcc-arm-linux-gnueabihf
+          elif [ "${{ matrix.platform.target }}" = "aarch64-unknown-linux-gnu" ]; then
+            sudo apt-get install -y gcc-aarch64-linux-gnu
+          fi
       - name: Build wheels
         run: cd rust/rustism && maturin build --target ${{ matrix.platform.target }} --release --out dist --find-interpreter
         env:
           SCCACHE: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER: arm-linux-gnueabihf-gcc
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
           name: wheels-linux-${{ matrix.platform.target }}
-          path: rust/rustism/dist
-
-  musllinux:
-    runs-on: ${{ matrix.platform.runner }}
-    strategy:
-      matrix:
-        platform:
-          - runner: ubuntu-22.04
-            target: x86_64-unknown-linux-musl
-          - runner: ubuntu-22.04
-            target: i686-unknown-linux-musl
-          - runner: ubuntu-22.04
-            target: aarch64-unknown-linux-musl
-          - runner: ubuntu-22.04
-            target: armv7-unknown-linux-musleabihf
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Install Maturin
-        run: pip install maturin
-      - name: Add Rust target
-        run: rustup target add ${{ matrix.platform.target }}
-      - name: Build wheels
-        run: cd rust/rustism && maturin build --target ${{ matrix.platform.target }} --release --out dist --find-interpreter
-        env:
-          SCCACHE: ${{ !startsWith(github.ref, 'refs/tags/') }}
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-musllinux-${{ matrix.platform.target }}
           path: rust/rustism/dist
 
   windows:
