Don't build socketio until fixed server storage issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       - ./instance:/app/instance
     restart: unless-stopped
 
-  socketio:
-    image: socket_open
-    build:
-      context: .
-      dockerfile: socket/Dockerfile
-    ports:
-      - "8406:8406"
+  # socketio:
+  #   image: socket_open
+  #   build:
+  #     context: .
+  #     dockerfile: socket/Dockerfile
+  #   ports:
+  #     - "8406:8406"
 
-    restart: unless-stopped
+  #   restart: unless-stopped
